# zamlib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  ZamConfig.h.in  appveyor.yml  remove_caches.sh
base/: CMakeLists.txt  base.h  library.h  logger.h  stdafx.h
base/filesystem/: whereami.h
base/log/: logger.cpp  logger.h  loggerConfig.cpp  loggerConfig.h  loggerDefine.cpp  loggerDefine.h  loggerInitializer.cpp  loggerInitializer.h  loggerManager.cpp  loggerManager.h  loggerSystem.cpp  loggerSystem.h
base/log/allocator/: loggerAlloc.h  loggerAllocConsole.cpp  loggerAllocConsole.h  loggerAllocFile.cpp  loggerAllocFile.h
base/log/appender/: loggerAppender.h  loggerAppenderConsole.cpp  loggerAppenderConsole.h  loggerAppenderFile.cpp  loggerAppenderFile.h  loggerAppenderTracer.cpp  loggerAppenderTracer.h  loggerAppenderUdp.cpp  loggerAppenderUdp.h
base/log/appender/collector/: collectorDefault.cpp
base/log/detail/: logWriter.cpp  logWriter.h  logWriterFactory.cpp  logWriterFactory.h  loggerAttrName.cpp  loggerAttrName.h  loggerInitializer.cpp  loggerInitializer.h  loggerPool.cpp  loggerPool.h  loggerSystemInitOnce.cpp  loggerSystemInitOnce.h  loggerWriter.cpp  loggerWriter.h
base/log/stream/: loggerStream.h  loggerStreamConsole.cpp  loggerStreamConsole.h
cmake/: FindJsoncpp.cmake  MSVCCFlagOverride.cmake  StaticCompile.cmake  c_flag_overrides_md.cmake
misc/tests/test_logging/: test_logging.json
misc/tests/test_logging_udp/: test_logging_udp.json
misc/tests/test_net_common/: logger.json
net/: CMakeLists.txt  library.h
tests/: CMakeLists.txt
tests/tests_base/: CMakeLists.txt
tests/tests_base/test_buf/: CMakeLists.txt  main.cpp
tests/tests_base/test_container/: CMakeLists.txt  main.cpp  test_qvector.h  test_waitq.h
tests/tests_base/test_logging/: CMakeLists.txt  main.cpp
tests/tests_base/test_logging_udp/: CMakeLists.txt  main.cpp
tests/tests_base/test_scheduler/: CMakeLists.txt  main.cpp
tests/tests_net/: CMakeLists.txt
tests/tests_net/common/: protocol_1.h  protocol_1_protobuf.pb.cc  protocol_1_protobuf.pb.h  protocol_1_protobuf.proto
tests/tests_net/test_tcp_client/: CMakeLists.txt  main.cpp  my_handler.h
tests/tests_net/test_tcp_server/: CMakeLists.txt  main.cpp  my_handler.h
zam/base/: CMakeLists.txt  base.h  buffer.h  exception.h  logger.h  macro.h
zam/base/container/: qvector.h  waitq.h
zam/base/filesystem/: whereami.h
zam/base/io/: ioObject.cpp  ioObject.h  ioSystem.cpp  ioSystem.h
zam/base/log/: logger.cpp  logger.h  loggerDefine.cpp  loggerDefine.h  loggerDump.cpp  loggerDump.h  loggerSystem.cpp  loggerSystem.h
zam/base/log/appender/: appenderPool.cpp  appenderPool.h  loggerAppender.h  loggerAppenderConsole.cpp  loggerAppenderConsole.h  loggerAppenderFile.cpp  loggerAppenderFile.h  loggerAppenderSyslog.cpp  loggerAppenderSyslog.h  loggerAppenderTracer.cpp  loggerAppenderTracer.h  loggerAppenderUdp.cpp  loggerAppenderUdp.h
zam/base/log/appender/collector/: collectorDefault.cpp  collectorDefault.h
zam/base/log/appender/detail/: frontendCreator.h  frontendFormatFactory.cpp  frontendFormatFactory.h
zam/base/log/detail/: loggerAttrName.cpp  loggerAttrName.h  loggerInitializer.cpp  loggerInitializer.h  loggerPool.cpp  loggerPool.h  loggerSystemInitOnce.h  loggerWriter.cpp  loggerWriter.h
zam/base/log/server/: loggerUdpServer.cpp  loggerUdpServer.h
zam/base/memory/: pool.h
zam/base/schedule/: scheduler.cpp  scheduler.h
zam/base/stream/: streamInputBuf.h  streamOutputBuf.h
zam/base/thread/: lockObject.h  staticValue.h
zam/net/: CMakeLists.txt  library.h  message.h  messageIStream.h  messageOStream.cpp  messageOStream.h  net.h  netError.h
zam/net/acceptor/: acceptor.cpp  acceptor.h  acceptorTcp.cpp  acceptorTcp.h
zam/net/cipher/: cipher.h  cipherNull.cpp  cipherNull.h
zam/net/connection/: connection.cpp  connection.h  connectionIO.h  connectionTcp.cpp  connectionTcp.h  endPoint.cpp  endPoint.h
zam/net/connector/: connector.h  connectorTcp.cpp  connectorTcp.h
zam/net/handler/: eventDispatcher.h  eventHandler.h  eventHandlerProtocol.cpp  eventHandlerProtocol.h  eventHandlerProtocolClient.h  eventHandlerProtocolServer.h
zam/net/message/: message.cpp  message.h  messageIStream.cpp  messageOStream.cpp  messageOStream.h
zam/net/packer/: packer.h  packerDefault.cpp  packerDefault.h
zam/net/proto/: formBinary.h  formJson.cpp  formJson.h  formProtobuf.h  forms.h
zam/net/warehouse/: warehouse.h
